--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,13 @@
-version: 0.0
-os: linux
+  version: 0.0
+  os: linux
 
-hooks:
-  BeforeInstall:
-    - location: Scripts/ecrLogin
-  AfterInstall:
-    - location: Scripts/runDockerContainer
-  ApplicationStop:
-    - location: Scripts/stopServer
+  hooks:
+    BeforeInstall:
+      - location: Scripts/ecrLogin
+    AfterInstall:
+      - location: Scripts/runDockerContainer.sh
+    ApplicationStop:
+      - location: Scripts/stopServer.sh
 
 
-# wget https://aws-codedeploy-us-west-1.s3.us-west-1.amazonaws.com/latest/install
+  # wget https://aws-codedeploy-us-west-1.s3.us-west-1.amazonaws.com/latest/install
