--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@
 
   hooks:
     BeforeInstall:
-      - location: Scripts/ecrLogin
+      - location: Scripts/ecrLogin.sh
     AfterInstall:
       - location: Scripts/runDockerContainer.sh
     ApplicationStop:
